--- a/depositos.html
+++ b/depositos.html
@@ -42,11 +42,10 @@
                     <p class="menuText">Depositos</p>
                 </div>
             </a>
-            <a class="linkNoStyle" href="analisis.html">
+            <a class="linkNoStyle" href="transitos.html">
                 <div class="menuItem">
-                    <i class="fa-solid fa-chart-column"></i>
-
-                    <p class="menuText">Analisis</p>
+                    <i class="fa-solid fa-door-closed"></i>
+                    <p class="menuText">Transitos</p>
                 </div>
             </a>
             <a class="linkNoStyle" href="ajustes.html">
@@ -88,10 +87,10 @@
                     <p class="menuText biggerText">Depositos</p>
                 </div>
             </a>
-            <a class="linkNoStyle" href="analisis.html">
+            <a class="linkNoStyle" href="transitos.html">
                 <div class="menuItem itemOnMobile">
-                    <i class="fa-solid fa-chart-column"></i>
-                    <p class="menuText biggerText">Analisis</p>
+                    <i class="fa-solid fa-door-closed"></i>
+                    <p class="menuText biggerText">Transitos</p>
                 </div>
             </a>
             <a class="linkNoStyle" href="ajustes.html">
@@ -136,8 +135,7 @@
 
                     <div class="miniContainer">
                         <label for="filterName">Item</label>
-                        <input type="text" id="filterName" name="filterName"
-                            placeholder="Ingrese un Item para buscar">
+                        <input type="text" id="filterName" name="filterName" placeholder="Ingrese un Item para buscar">
                     </div>
 
                     <div class="miniContainer">
@@ -165,49 +163,49 @@
                         <tbody>
                             <tr>
                                 <td scope="row" data-label="Item">Alimento</td>
-                                <td  data-label="Refugio">Refugio 4</td>
+                                <td data-label="Refugio">Refugio 4</td>
                                 <td data-label="Ciudad">Rosario</td>
                                 <td data-label="Telefono">123456789</td>
                             </tr>
                             <tr>
                                 <td scope="row" data-label="Item">Alimento</td>
-                                <td  data-label="Refugio">Refugio 4</td>
+                                <td data-label="Refugio">Refugio 4</td>
                                 <td data-label="Ciudad">Rosario</td>
                                 <td data-label="Telefono">123456789</td>
                             </tr>
                             <tr>
                                 <td scope="row" data-label="Item">Alimento</td>
-                                <td  data-label="Refugio">Refugio 4</td>
+                                <td data-label="Refugio">Refugio 4</td>
                                 <td data-label="Ciudad">Rosario</td>
                                 <td data-label="Telefono">123456789</td>
                             </tr>
                             <tr>
                                 <td scope="row" data-label="Item">Alimento</td>
-                                <td  data-label="Refugio">Refugio 4</td>
+                                <td data-label="Refugio">Refugio 4</td>
                                 <td data-label="Ciudad">Rosario</td>
                                 <td data-label="Telefono">123456789</td>
                             </tr>
                             <tr>
                                 <td scope="row" data-label="Item">Alimento</td>
-                                <td  data-label="Refugio">Refugio 4</td>
+                                <td data-label="Refugio">Refugio 4</td>
                                 <td data-label="Ciudad">Rosario</td>
                                 <td data-label="Telefono">123456789</td>
                             </tr>
                             <tr>
                                 <td scope="row" data-label="Item">Alimento</td>
-                                <td  data-label="Refugio">Refugio 4</td>
+                                <td data-label="Refugio">Refugio 4</td>
                                 <td data-label="Ciudad">Rosario</td>
                                 <td data-label="Telefono">123456789</td>
                             </tr>
                             <tr>
                                 <td scope="row" data-label="Item">Alimento</td>
-                                <td  data-label="Refugio">Refugio 4</td>
+                                <td data-label="Refugio">Refugio 4</td>
                                 <td data-label="Ciudad">Rosario</td>
                                 <td data-label="Telefono">123456789</td>
                             </tr>
                             <tr>
                                 <td scope="row" data-label="Item">Alimento</td>
-                                <td  data-label="Refugio">Refugio 4</td>
+                                <td data-label="Refugio">Refugio 4</td>
                                 <td data-label="Ciudad">Rosario</td>
                                 <td data-label="Telefono">123456789</td>
                             </tr>
