--- a/refugios.html
+++ b/refugios.html
@@ -42,11 +42,10 @@
                     <p class="menuText">Depositos</p>
                 </div>
             </a>
-<a class="linkNoStyle" href="analisis.html">
+            <a class="linkNoStyle" href="transitos.html">
                 <div class="menuItem">
-                        <i class="fa-solid fa-chart-column"></i>
-
-                    <p class="menuText">Analisis</p>
+                    <i class="fa-solid fa-door-closed"></i>
+                    <p class="menuText">Transitos</p>
                 </div>
             </a>
             <a class="linkNoStyle" href="ajustes.html">
@@ -88,10 +87,10 @@
                     <p class="menuText biggerText">Depositos</p>
                 </div>
             </a>
-<a class="linkNoStyle" href="analisis.html">
+            <a class="linkNoStyle" href="transitos.html">
                 <div class="menuItem itemOnMobile">
-                      <i class="fa-solid fa-chart-column"></i>
-                    <p class="menuText biggerText">Analisis</p>
+                    <i class="fa-solid fa-door-closed"></i>
+                    <p class="menuText biggerText">Transitos</p>
                 </div>
             </a>
             <a class="linkNoStyle" href="ajustes.html">
