--- a/index.html
+++ b/index.html
@@ -12,9 +12,6 @@
         rel="stylesheet">
     <script src="https://kit.fontawesome.com/91e633fd72.js" crossorigin="anonymous"></script>
     <title>ARPA</title>
-
-
-
 </head>
 
 <body>
@@ -28,6 +25,9 @@
         </div>
         <p class="subtLog">
             ¿No tiene una cuenta? <a href="register.html">Cree una</a>
+        </p>
+        <p class="subtLog segundoSubtLog">
+            ¿Quiere registrar un refugio? <a href="registerRefugio.html">Registre uno</a>
         </p>
         <div class="contenedorInputs">
             <input id="inputEmail" type="email" class="inputField" value placeholder="Email">
