--- a/transitos.html
+++ b/transitos.html
@@ -88,9 +88,9 @@
                 </div>
             </a>
             <a class="linkNoStyle" href="transitos.html">
-                <div class="menuItem itemOnMobile">
+                <div class="menuItem">
                     <i class="fa-solid fa-door-closed"></i>
-                    <p class="menuText biggerText">Transitos</p>
+                    <p class="menuText">Transitos</p>
                 </div>
             </a>
             <a class="linkNoStyle" href="ajustes.html">
@@ -123,31 +123,39 @@
                     </div>
                 </div>
 
-                <p class="indicadorPagina">Personas</p>
+                <p class="indicadorPagina">Transitos</p>
 
                 <div id="contenedorFiltros" class="closedFiltering">
 
                     <div class="miniContainer">
-                        <label for="filterNamePerso">Nombre</label>
-                        <input type="text" id="filterNamePerso" name="filterName"
+                        <label for="filterName">Nombre</label>
+                        <input type="text" id="filterName" name="filterName"
                             placeholder="Ingrese un Nombre para buscar">
                     </div>
 
                     <div class="miniContainer">
-                        <label for="filterCityPerso">Ciudad</label>
-                        <select id="filterCityPerso" class="dropdown">
+                        <label for="filterCity">Ciudad</label>
+                        <select id="filterCity" class="dropdown">
                             <option>All</option>
                             <option>Rosario</option>
                         </select>
                     </div>
+                    <div class="miniContainer">
+                        <label for="filterCompletion">Refugio completo</label>
+                        <select id="filterCompletion" class="dropdown">
+                            <option>All</option>
+                            <option>Si</option>
+                            <option>No</option>
+                        </select>
+                    </div>
 
-                    <button id="botonFiltrarMasco" class="butLog butLogSelect" onclick="myFunction()">Filtrar</button>
-                    <button id="botonAddMasco" class="butLog butLogSelect" onclick="myFunction2()">Agregar
-                        Persona</button>
+                    <button id="botonFiltrarRefu" class="butLog butLogSelect">Filtrar</button>
+
+                    <button id="botonAddRefu" class="butLog butLogSelect">Agregar Transito</button>
 
                 </div>
 
-                <div id="tabContePerso" class="contenedorTabla">
+                <div id="tabConteRefu" class="contenedorTabla">
                     <table>
                         <thead>
                             <tr>
@@ -157,6 +165,8 @@
                                 <th scope="col">Dirección</th>
                                 <th scope="col">Telefono</th>
                                 <th scope="col">Email</th>
+                                <th scope="col">Empleados</th>
+                                <th scope="col">Animales</th>
                                 <th scope="col">Detalles</th>
                             </tr>
                         </thead>
@@ -168,6 +178,8 @@
                                 <td data-label="Dirección">calle falsa 123</td>
                                 <td data-label="Telefono">123456789</td>
                                 <td data-label="Email">ejemplo@dominio.com</td>
+                                <td data-label="Empleados">2</td>
+                                <td data-label="Animales">13/40</td>
                                 <td data-label="Detalles"><a href="#" class="linkNoStyle">Ver detalles</a></td>
                             </tr>
                             <tr>
@@ -177,6 +189,8 @@
                                 <td data-label="Dirección">calle falsa 123</td>
                                 <td data-label="Telefono">123456789</td>
                                 <td data-label="Email">ejemplo@dominio.com</td>
+                                <td data-label="Empleados">2</td>
+                                <td data-label="Animales">13/40</td>
                                 <td data-label="Detalles"><a href="#" class="linkNoStyle">Ver detalles</a></td>
                             </tr>
                             <tr>
@@ -186,6 +200,8 @@
                                 <td data-label="Dirección">calle falsa 123</td>
                                 <td data-label="Telefono">123456789</td>
                                 <td data-label="Email">ejemplo@dominio.com</td>
+                                <td data-label="Empleados">2</td>
+                                <td data-label="Animales">13/40</td>
                                 <td data-label="Detalles"><a href="#" class="linkNoStyle">Ver detalles</a></td>
                             </tr>
                             <tr>
@@ -195,6 +211,8 @@
                                 <td data-label="Dirección">calle falsa 123</td>
                                 <td data-label="Telefono">123456789</td>
                                 <td data-label="Email">ejemplo@dominio.com</td>
+                                <td data-label="Empleados">2</td>
+                                <td data-label="Animales">13/40</td>
                                 <td data-label="Detalles"><a href="#" class="linkNoStyle">Ver detalles</a></td>
                             </tr>
                             <tr>
@@ -204,6 +222,8 @@
                                 <td data-label="Dirección">calle falsa 123</td>
                                 <td data-label="Telefono">123456789</td>
                                 <td data-label="Email">ejemplo@dominio.com</td>
+                                <td data-label="Empleados">2</td>
+                                <td data-label="Animales">13/40</td>
                                 <td data-label="Detalles"><a href="#" class="linkNoStyle">Ver detalles</a></td>
                             </tr>
                             <tr>
@@ -213,6 +233,8 @@
                                 <td data-label="Dirección">calle falsa 123</td>
                                 <td data-label="Telefono">123456789</td>
                                 <td data-label="Email">ejemplo@dominio.com</td>
+                                <td data-label="Empleados">2</td>
+                                <td data-label="Animales">13/40</td>
                                 <td data-label="Detalles"><a href="#" class="linkNoStyle">Ver detalles</a></td>
                             </tr>
                             <tr>
@@ -222,6 +244,8 @@
                                 <td data-label="Dirección">calle falsa 123</td>
                                 <td data-label="Telefono">123456789</td>
                                 <td data-label="Email">ejemplo@dominio.com</td>
+                                <td data-label="Empleados">2</td>
+                                <td data-label="Animales">13/40</td>
                                 <td data-label="Detalles"><a href="#" class="linkNoStyle">Ver detalles</a></td>
                             </tr>
                             <tr>
@@ -231,6 +255,8 @@
                                 <td data-label="Dirección">calle falsa 123</td>
                                 <td data-label="Telefono">123456789</td>
                                 <td data-label="Email">ejemplo@dominio.com</td>
+                                <td data-label="Empleados">2</td>
+                                <td data-label="Animales">13/40</td>
                                 <td data-label="Detalles"><a href="#" class="linkNoStyle">Ver detalles</a></td>
                             </tr>
                             <tr>
@@ -240,6 +266,8 @@
                                 <td data-label="Dirección">calle falsa 123</td>
                                 <td data-label="Telefono">123456789</td>
                                 <td data-label="Email">ejemplo@dominio.com</td>
+                                <td data-label="Empleados">2</td>
+                                <td data-label="Animales">13/40</td>
                                 <td data-label="Detalles"><a href="#" class="linkNoStyle">Ver detalles</a></td>
                             </tr>
                             <tr>
@@ -249,6 +277,8 @@
                                 <td data-label="Dirección">calle falsa 123</td>
                                 <td data-label="Telefono">123456789</td>
                                 <td data-label="Email">ejemplo@dominio.com</td>
+                                <td data-label="Empleados">2</td>
+                                <td data-label="Animales">13/40</td>
                                 <td data-label="Detalles"><a href="#" class="linkNoStyle">Ver detalles</a></td>
                             </tr>
                             <tr>
@@ -258,6 +288,8 @@
                                 <td data-label="Dirección">calle falsa 123</td>
                                 <td data-label="Telefono">123456789</td>
                                 <td data-label="Email">ejemplo@dominio.com</td>
+                                <td data-label="Empleados">2</td>
+                                <td data-label="Animales">13/40</td>
                                 <td data-label="Detalles"><a href="#" class="linkNoStyle">Ver detalles</a></td>
                             </tr>
                             <tr>
@@ -267,6 +299,8 @@
                                 <td data-label="Dirección">calle falsa 123</td>
                                 <td data-label="Telefono">123456789</td>
                                 <td data-label="Email">ejemplo@dominio.com</td>
+                                <td data-label="Empleados">2</td>
+                                <td data-label="Animales">13/40</td>
                                 <td data-label="Detalles"><a href="#" class="linkNoStyle">Ver detalles</a></td>
                             </tr>
                             <tr>
@@ -276,6 +310,8 @@
                                 <td data-label="Dirección">calle falsa 123</td>
                                 <td data-label="Telefono">123456789</td>
                                 <td data-label="Email">ejemplo@dominio.com</td>
+                                <td data-label="Empleados">2</td>
+                                <td data-label="Animales">13/40</td>
                                 <td data-label="Detalles"><a href="#" class="linkNoStyle">Ver detalles</a></td>
                             </tr>
                             <tr>
@@ -285,6 +321,8 @@
                                 <td data-label="Dirección">calle falsa 123</td>
                                 <td data-label="Telefono">123456789</td>
                                 <td data-label="Email">ejemplo@dominio.com</td>
+                                <td data-label="Empleados">2</td>
+                                <td data-label="Animales">13/40</td>
                                 <td data-label="Detalles"><a href="#" class="linkNoStyle">Ver detalles</a></td>
                             </tr>
                             <tr>
@@ -294,6 +332,8 @@
                                 <td data-label="Dirección">calle falsa 123</td>
                                 <td data-label="Telefono">123456789</td>
                                 <td data-label="Email">ejemplo@dominio.com</td>
+                                <td data-label="Empleados">2</td>
+                                <td data-label="Animales">13/40</td>
                                 <td data-label="Detalles"><a href="#" class="linkNoStyle">Ver detalles</a></td>
                             </tr>
                             <tr>
@@ -303,6 +343,8 @@
                                 <td data-label="Dirección">calle falsa 123</td>
                                 <td data-label="Telefono">123456789</td>
                                 <td data-label="Email">ejemplo@dominio.com</td>
+                                <td data-label="Empleados">2</td>
+                                <td data-label="Animales">13/40</td>
                                 <td data-label="Detalles"><a href="#" class="linkNoStyle">Ver detalles</a></td>
                             </tr>
                             <tr>
@@ -312,8 +354,33 @@
                                 <td data-label="Dirección">calle falsa 123</td>
                                 <td data-label="Telefono">123456789</td>
                                 <td data-label="Email">ejemplo@dominio.com</td>
+                                <td data-label="Empleados">2</td>
+                                <td data-label="Animales">13/40</td>
                                 <td data-label="Detalles"><a href="#" class="linkNoStyle">Ver detalles</a></td>
                             </tr>
+                            <tr>
+                                <td scope="row" data-label="ID">####</td>
+                                <td data-label="Nombre">Refugio 4</td>
+                                <td data-label="Ciudad">Rosario</td>
+                                <td data-label="Dirección">calle falsa 123</td>
+                                <td data-label="Telefono">123456789</td>
+                                <td data-label="Email">ejemplo@dominio.com</td>
+                                <td data-label="Empleados">2</td>
+                                <td data-label="Animales">13/40</td>
+                                <td data-label="Detalles"><a href="#" class="linkNoStyle">Ver detalles</a></td>
+                            </tr>
+                            <tr>
+                                <td scope="row" data-label="ID">####</td>
+                                <td data-label="Nombre">Refugio 4</td>
+                                <td data-label="Ciudad">Rosario</td>
+                                <td data-label="Dirección">calle falsa 123</td>
+                                <td data-label="Telefono">123456789</td>
+                                <td data-label="Email">ejemplo@dominio.com</td>
+                                <td data-label="Empleados">2</td>
+                                <td data-label="Animales">13/40</td>
+                                <td data-label="Detalles"><a href="#" class="linkNoStyle">Ver detalles</a></td>
+                            </tr>
+
 
                         </tbody>
                     </table>
