--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <a href="recover.html">Olvidó su contraseña?</a>
         </span>
 
-        <a class="butLog" href="logged.html">Ingresar</a>
+        <a class="butLog" onclick="login()">Ingresar</a>
 
     </div>
 
