--- a/logged.html
+++ b/logged.html
@@ -54,7 +54,7 @@
                     <p class="menuText">Ajustes</p>
                 </div>
             </a>
-            <a class="linkNoStyle" href="index.html">
+            <a class="linkNoStyle" id="logout" onclick="logout()">
                 <div class="menuItem">
                     <i class="fa-solid fa-arrow-right-from-bracket"></i>
                     <p class="menuText">Salir</p>
@@ -99,7 +99,7 @@
                     <p class="menuText biggerText">Ajustes</p>
                 </div>
             </a>
-            <a class="linkNoStyle" href="index.html">
+            <a class="linkNoStyle" id="logout" onclick="logout()">
                 <div class="menuItem itemOnMobile">
                     <i class="fa-solid fa-arrow-right-from-bracket"></i>
                     <p class="menuText biggerText">Salir</p>
@@ -112,7 +112,7 @@
                 <div class="togglerPosition">
                     <div id="toggle"></div>
                 </div>
-                <div class="userName">Sola, Wilson Eric</div>
+                <div id="loggedUser" class="userName">Name</div>
                 <img class="userPic bps" src="images/avatar3.png" alt="profile image">
             </div>
             <div class="realContent">
