--- a/register.html
+++ b/register.html
@@ -39,7 +39,7 @@
         </div>
 
         <div class="contenedorInputs3">
-            <a class="butLog spacer1" href="logged.html">Registrarse</a>
+            <a class="butLog spacer1" onclick="register()">Registrarse</a>
             <a class="butLog butLogINV spacer1" href="index.html">Cancelar</a>
         </div>
     </div>
