--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 
     <div id="toastOK">Cambio realizado con exito</div>
     <div id="toastNOT">Se produjo un error</div>
+    <script src="script.js"></script>
 
 </body>
 
