--- a/register.html
+++ b/register.html
@@ -50,6 +50,7 @@
 
     <div id="toastOK">Cambio realizado con exito</div>
     <div id="toastNOT">Se produjo un error</div>
+    <script src="scriptRegister.js"></script>
 
 </body>
 
