--- a/refugios.html
+++ b/refugios.html
@@ -439,7 +439,7 @@
             <footer>
                 <menu class="modalFooter">
                     <a class="butLog spacer1" onclick="myFunction(), this.closest('dialog').close('cancel')">Agregar
-                        Mascota</a>
+                        Refugio</a>
                     <a class="butLog butLogINV spacer1" autofocus type="reset"
                         onclick="this.closest('dialog').close('cancel')">Cancelar</a>
                 </menu>
