--- a/personas.html
+++ b/personas.html
@@ -368,7 +368,7 @@
             <footer>
                 <menu class="modalFooter">
                     <a class="butLog spacer1" onclick="myFunction(), this.closest('dialog').close('cancel')">Agregar
-                        Mascota</a>
+                        Persona</a>
                     <a class="butLog butLogINV spacer1" autofocus type="reset"
                         onclick="this.closest('dialog').close('cancel')">Cancelar</a>
                 </menu>
